# tagger

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  LICENSE.txt  README.rst  Taskfile.yml  pyproject.toml  setup.cfg
pkg/: meta.yaml
src/tagger/: __init__.py
test/: test_tagger.py
tests/: test_tagger.py
