[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = [
    'B',
    'C4',
    'E',
    'F',
    'NPY',
    'PIE',
    'PL',
    'PT',
    'RUF',
    'TRY',
    'W',
]
ignore = [
    'E501',  # Line length -- if Black didn't catch it, I don't wanna hear about it
    'PLR0911',  # annoying heuristic
    'PLR0912',  # annoying heuristic
    'PLR0913',  # annoying heuristic
    'PLR0915',  # annoying heuristic
    'TRY003',  # Messages in exception; this is silly, tbh
    'TRY200',  # Duplicate with B904
]

[tool.ruff.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true
