[metadata]
name = tagger
version = 0.1.0
author = Peter Talley
author_email = peterctalley@gmail.com
url = https://github.com/otaithleigh/tagger
description = Process and create structured integer tags.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages =
    tagger
install_requires =
    numpy
